--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"version": "0.0.9",
+	"version": "0.0.10",
 	"license": "MIT",
 	"main": "dist/index.js",
 	"typings": "dist/index.d.ts",
@@ -25,8 +25,8 @@
 		"@nestjs/common": "^7.0.0 || ^8.0.0",
 		"@nestjs/core": "^7.0.0 || ^8.0.0",
 		"@nestjs/platform-express": "^7.0.0 || ^8.0.0",
-		"@sentry/node": "^6.11.0",
-		"@sentry/tracing": "^6.12.0",
+        "@sentry/node": "^6.11.0 || ^7.0.0",
+        "@sentry/tracing": "^6.12.0 || ^7.0.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.2.0"
 	},
