--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"version": "0.0.10",
+	"version": "0.0.11",
 	"license": "MIT",
 	"main": "dist/index.js",
 	"typings": "dist/index.d.ts",
@@ -22,9 +22,9 @@
 		"prepare": "tsdx build"
 	},
 	"peerDependencies": {
-		"@nestjs/common": "^7.0.0 || ^8.0.0",
-		"@nestjs/core": "^7.0.0 || ^8.0.0",
-		"@nestjs/platform-express": "^7.0.0 || ^8.0.0",
+		"@nestjs/common": "^7.0.0 || ^8.0.0 || ^9.0.0",
+		"@nestjs/core": "^7.0.0 || ^8.0.0 || ^9.0.0",
+		"@nestjs/platform-express": "^7.0.0 || ^8.0.0 || ^9.0.0",
         "@sentry/node": "^6.11.0 || ^7.0.0",
         "@sentry/tracing": "^6.12.0 || ^7.0.0",
 		"reflect-metadata": "^0.1.13",
@@ -39,10 +39,10 @@
 	"author": "Mahendra D.",
 	"module": "dist/sentry-nestjs.esm.js",
 	"devDependencies": {
-		"@nestjs/common": "^7.0.0 || ^8.0.0",
-		"@nestjs/core": "^7.0.0 || ^8.0.0",
+		"@nestjs/common": "^7.0.0 || ^8.0.0 || ^9.0.0",
+		"@nestjs/core": "^7.0.0 || ^8.0.0 || ^9.0.0",
 		"@nestjs/graphql": "^9.0.4",
-		"@nestjs/platform-express": "^7.0.0 || ^8.0.0",
+		"@nestjs/platform-express": "^7.0.0 || ^8.0.0 || ^9.0.0",
 		"@nestjs/testing": "^8.0.6",
 		"@sentry/node": "^6.11.0 || ^7.0.0",
 		"@sentry/tracing": "^6.12.0 || ^7.0.0",
