--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"version": "0.0.12",
+	"version": "0.1.1",
 	"license": "MIT",
 	"main": "dist/index.js",
 	"typings": "dist/index.d.ts",
@@ -12,7 +12,7 @@
 		"src"
 	],
 	"engines": {
-		"node": ">=10"
+		"node": ">=16"
 	},
 	"scripts": {
 		"start": "tsdx watch",
@@ -25,8 +25,8 @@
 		"@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0",
 		"@nestjs/core": "^8.0.0 || ^9.0.0 || ^10.0.0",
 		"@nestjs/platform-express": "^8.0.0 || ^9.0.0 || ^10.0.0",
-        "@sentry/node": "^6.11.0 || ^7.0.0",
-        "@sentry/tracing": "^6.12.0 || ^7.0.0",
+		"@sentry/node": "^7.90.0",
+		"@sentry/types": "^7.90.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.2.0"
 	},
@@ -44,8 +44,8 @@
 		"@nestjs/graphql": "^9.0.4",
 		"@nestjs/platform-express": "^8.0.0 || ^9.0.0 || ^10.0.0",
 		"@nestjs/testing": "^8.0.6",
-		"@sentry/node": "^6.11.0 || ^7.0.0",
-		"@sentry/tracing": "^6.12.0 || ^7.0.0",
+		"@sentry/node": "^7.90.0",
+        "@sentry/types": "^7.90.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"husky": "^7.0.2",
 		"reflect-metadata": "^0.1.13",
@@ -58,6 +58,5 @@
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
 		}
-	},
-	"dependencies": {}
+	}
 }
